<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">约动</string>
    
    <drawable name="clr_btn_normal">#00BEE6</drawable>
    <drawable name="clr_btn_pressed">#02AFD3</drawable>
     <drawable name="title_backcolor">#00BEE6</drawable>
      <drawable name="all_backcolor">#EFEFF4</drawable>
      <string name="title_regist">注册</string>
      <string name="input_nickname">请输入昵称</string>
      <string name="input_firstpwd">设置登录密码</string>
      <string name="input_secontpwd">再次输入密码</string>
      <string name="input_phone">请输入手机号码</string>
      <string name="input_smscode">请输入短信验证码</string>
      <string name="get_smscode">获取验证码</string>
      <string name="btn_regist">注      册</string>
      <string name="input_loginpwd">请输入登录密码</string>
      <string name="cb_rempwd">记住密码</string>
      <string name="cb_autologin">自动登录</string>
      <string name="btn_login">登      录</string>
      <string name="txt_regist">注册</string>
      <string name="title_login">登录</string>
      <string name="head_album">相册</string>
      <string name="head_camera">相机</string>
      <string name="btn_cancel">取消</string>
      <string name="menu_changeuser">切换用户</string>
      <string name="menu_exit">退出</string>

</resources>
