<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnPickPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/head_album" />

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/head_camera" />

    <Button
        android:id="@+id/btnPhoteCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel" />

</LinearLayout>