<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_backcolor"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/title_backcolor" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_login"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:hint="@string/input_phone"
        android:inputType="phone"
        android:maxLength="11"
        android:padding="5dp"
        android:paddingLeft="10dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/input_loginpwd"
        android:inputType="textPassword"
        android:maxLength="20"
        android:padding="5dp"
        android:paddingLeft="20dp"
        android:singleLine="true" />

    <RelativeLayout
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" >

        <CheckBox
            android:id="@+id/cb_rempwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickRemPwd"
            android:text="@string/cb_rempwd"
            android:textColor="@drawable/title_backcolor" />

        <CheckBox
            android:id="@+id/cb_autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="clickAutoLogin"
            android:text="@string/cb_autologin"
            android:textColor="@drawable/title_backcolor" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" >

        <Button
            android:layout_width="290dp"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            android:background="@drawable/button_selector"
            android:onClick="clickLogin"
            android:text="@string/btn_login"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="70dp"
            android:clickable="true"
            android:onClick="clickRegist"
            android:text="@string/txt_regist"
            android:textColor="@drawable/title_backcolor"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>