<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_registmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_backcolor"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/title_backcolor" >

        <Button
            android:id="@+id/btn_return_tiv"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="@drawable/fanhui"
            android:onClick="clickReturn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_regist"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <com.tencentsng.yuedong.widget.CircleImageView
        android:id="@+id/iv_head"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="clickhead"
        android:src="@drawable/head" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/input_nickname"
        android:maxLength="15"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_firstpwd"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/input_firstpwd"
        android:maxLength="20"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_secondpwd"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/input_secontpwd"
        android:maxLength="20"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/input_phone"
        android:inputType="phone"
        android:maxLength="11"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_code"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginLeft="0dp"
            android:hint="@string/input_smscode"
            android:maxLength="6" />

        <Button
            android:id="@+id/btn_sms"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_stroke_bg"
            android:onClick="clickGetSms"
            android:text="@string/get_smscode"
            android:textColor="@drawable/title_backcolor" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <Button
            android:layout_width="290dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:background="@drawable/button_selector"
            android:onClick="clickregist"
            android:text="@string/btn_regist"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>